--- a/config/bluerov_config.yaml
+++ b/config/bluerov_config.yaml
@@ -5,8 +5,8 @@ simulation:
   graphical: false
   fancy_robot: false
   save_output: results/
-  save_csv: true
-  save_graphs: true
+  save_csv: false
+  save_graphs: false
   show_graphs: false
   save_images: false
 
@@ -32,7 +32,11 @@ robot:
     kinematics_only: false
 
   controller:
-    type: SMC # SIMPLE, ADAP, SMC, PID
+    type: SMC # SIMPLE, ADAP, SMC, PID, RAW
+
+    raw:
+      lambda: 0.0
+      coord_type: cartesian
 
     simple:
       lambda: [12.0, 12.0, 12.0, 0.5, 0.5, 0.5]
