--- a/config/bluerov_config_line.yaml
+++ b/config/bluerov_config_line.yaml
@@ -27,9 +27,34 @@ robot:
     marker_position_in_image:
       - [0.0, -1.0]
       - [0.0, 1.0]
+    kinematics_only: true
+
+  controller:
+    type: RAW # SIMPLE, ADAP, SMC, PID, RAW
+
+    raw:
+      lambda: 0.0
+      coord_type: cartesian
+
+    simple:
+      lambda: [12.0, 12.0, 12.0, 0.5, 0.5, 0.5]
+
+    adaptative:
+      lambda_min: [3.0, 3.0, 3.0, 0.0, 0.5, 0.0]
+      lambda_max: [10.0, 10.0, 10.0, 0.0, 0.5, 0.0]
+      func: linear # linear, quad
+
+    pid:
+      kp: [3.0, 4.0, 3.0, 0.0, 0.0, 0.5]
+      ki: [0.1, 0.1, 0.1, 0.0, 0.0, 0.05]
+      kd: [0.1, 0.2, 0.1, 0.0, 0.0, 0.0]
+
+    smc:
+      k: [30.0, 30.0, 30.0, 0.0, 0.0, 1.0]
+      lambda: [1.5, 1.5, 1.5, 0.0, 0.0, 1.0]
+      phi: [0.8, 0.8, 0.8, 0.8, 0.8, 0.8]
 
     error_tol: 0.01
-    lambda: 4.0
     # 0 to 1 parameter, ratio * L_e_s + (1 - ratio) * L_e_z
     # where L_e_s is computed with the fixed desired depth to the target
     # and L_e_z is computed with the actual z distance of each points
